[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/ai_assist/ui/generate_images/history_dialog.gd" type="Script" id=1]

[node name="HistoryDialog" type="WindowDialog"]
margin_right = 450.0
margin_bottom = 300.0
window_title = "History"
resizable = true
script = ExtResource( 1 )

[node name="VBox" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -8.0

[node name="ClearHistory" type="Button" parent="VBox"]
margin_left = 340.0
margin_right = 434.0
margin_bottom = 20.0
size_flags_horizontal = 8
disabled = true
text = "Clear History"

[node name="Scroll" type="ScrollContainer" parent="VBox"]
margin_top = 24.0
margin_right = 434.0
margin_bottom = 284.0
size_flags_vertical = 3

[node name="Contents" type="HBoxContainer" parent="VBox/Scroll"]
margin_right = 434.0
margin_bottom = 260.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="RequestJSON" type="AcceptDialog" parent="."]
margin_right = 250.0
margin_bottom = 250.0
window_title = "Request JSON"
resizable = true

[node name="VBox" type="VBoxContainer" parent="RequestJSON"]
margin_left = 8.0
margin_top = 8.0
margin_right = 242.0
margin_bottom = 214.0

[node name="Code" type="RichTextLabel" parent="RequestJSON/VBox"]
margin_left = 8.0
margin_top = 8.0
margin_right = 242.0
margin_bottom = 214.0
focus_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
selection_enabled = true

[node name="Copy" type="Button" parent="RequestJSON/VBox"]
margin_right = 12.0
margin_bottom = 20.0
size_flags_horizontal = 4
text = "Copy"

[connection signal="pressed" from="VBox/ClearHistory" to="." method="_on_ClearHistory_pressed"]
[connection signal="pressed" from="RequestJSON/VBox/Copy" to="." method="_on_Copy_pressed"]
